fix: 모달 부분 z-index 추가

--- a/src/components/background/BackgroundShadow/BackgroundShadow.scoped.scss
+++ b/src/components/background/BackgroundShadow/BackgroundShadow.scoped.scss
@@ -4,4 +4,5 @@
   height: 100vh;
   position: absolute;
   @include flexCol(center, center);
+  z-index: 100;
 }
